syntax = "proto3";
package com.aws.protobuf;
option java_outer_classname = "OrderMessages";

import "google/protobuf/timestamp.proto";

enum OrderType {
  BUY = 0;
  SALE = 1;
}

enum OrderStatus {
    NEW = 0;
    PARTIALLY_EXECUTED = 1;
    EXECUTED = 2;
    PARTIALLY_CANCELLED = 3;
    CANCELLED = 4;
}

message OrderCreatedEvent {
  int64 order_id = 1;
  int64 user_id = 2;
  int64 portfolio_id = 3;
  int64 instrument_id = 4;
  int64 count = 5;
  string lotPrice = 6;
  OrderType type = 7;
  OrderStatus status = 8;
  google.protobuf.Timestamp created_at = 9;
}

message OrderUpdatedEvent {
  int64 order_id = 1;
  int64 user_id = 2;
  int64 portfolio_id = 3;
  int64 instrument_id = 4;
  int64 count = 5;
  int64 executed_count = 6;
  string lot_price = 7;
  string executed_total = 8;
  OrderType type = 9;
  OrderStatus status = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}